# ChangeLog for dev-util/schroot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2009; Christian Ruppert <idl0r@gentoo.org> schroot-1.2.2.ebuild:
  Simplify.

  03 May 2009; Nick Fortino (nfortino) <nfortino@gmail.com>
  -schroot-1.2.1.ebuild, +schroot-1.2.2.ebuild:
  Version bump

  04 Feb 2009; Nick Fortino (nfortino) <nfortino@gmail.com>
  +schroot-1.2.1.ebuild, +files/schroot.autotools.patch,
  +files/schroot.pamfix.patch, +files/schroot.tests.patch, +metadata.xml:
  New ebuild for bug 257334 thanks to Christian (idl0r) and Tommy (Tommy[D])
