@@ -2,6 +2,6 @@ AUX schroot.autotools.patch 4228 RMD160 24051ee9ea62aa2e9e233624a37a44dd63596dfc
 AUX schroot.pamfix.patch 1977 RMD160 d1f4434554e75353f43e9df94787cdeded38b23d SHA1 a016b42b7d3acf6543cf2d26d658852912c40196 SHA256 438605a5976f151f31acdec9671d42992c19d69bf6a1ae8ab3b29f221e4899a2
 AUX schroot.tests.patch 3744 RMD160 23ddf93e0e875a6c567c7442f0b419beee69604d SHA1 34f044e9b5a6290e858d4168a7748f233286f991 SHA256 031f20c88be70e1ac1fcdd41a83c86532bcd17b6118dd0666aada483caf16695
 DIST schroot_1.2.2.orig.tar.gz 7735917 RMD160 7d4418811c05bc19eb675730109e1e77e1e54f88 SHA1 c52366eeee4830f0d65dc90fd3aad34b8252e447 SHA256 13f75570195e2f7c3e870b400eff5cf86374462c89dab7f20f9ec74c3a52b696
-EBUILD schroot-1.2.2.ebuild 999 RMD160 c48df66ec31e09007b8c7ce7f6aa8d2035ff3945 SHA1 23cba3254a115eb34e94fe4af630677cdaa96c61 SHA256 34e8670cdc6283af88ee78e811fab383b7a772ae9b4041bdc834e81250aca6db
-MISC ChangeLog 597 RMD160 5ef2f32b9b26db9eb882021b44ae02387aef0090 SHA1 8ebde7b9603cf837f14d500d15c63b37ad7ecdd0 SHA256 14ba6542d31498e0d8eabb46a8debbe75afc663e161addb8a52dfc237180c86d
+EBUILD schroot-1.2.2.ebuild 939 RMD160 dbf8f369961adbe12608ce9b6bf517973a58b524 SHA1 7c0689ab11ef5f267706a913a133223682b8d02b SHA256 d2d838dd049252b5153df1d473217180e97c3c50301a7355f190b013d062d6a0
+MISC ChangeLog 703 RMD160 ac469667eb1385594d13c16f64be55795a488cf2 SHA1 0d4fa3caefb12f3ec3f02aab1dcc176fd516c833 SHA256 2aa50e9be0e7fde8cb62b4ae2644f254ee9877e13f394d6f407011d88ae4365d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
