@@ -23,10 +23,7 @@ DEPEND="${RDEPEND}
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-
-	epatch "${FILESDIR}/${PN}.pamfix.patch" \
-		"${FILESDIR}/${PN}.autotools.patch" \
-		"${FILESDIR}/${PN}.tests.patch"
+	epatch "${FILESDIR}/${PN}.{pamfix,autotools,test}.patch"
 	AT_M4DIR="m4" eautoreconf
 }
 
